--- a/package.json
+++ b/package.json
@@ -25,10 +25,9 @@
     "url": "https://github.com/Orenkay/bankin-scrapper-challenge/issues"
   },
   "homepage": "https://github.com/Orenkay/bankin-scrapper-challenge#readme",
-  "devDependencies": {
-    "debug": "^3.1.0"
-  },
+  "devDependencies": {},
   "dependencies": {
+    "commander": "^2.13.0",
     "puppeteer": "^1.0.0"
   }
 }
